# swarf

./: .gitignore  Cargo.toml  LICENSE  README.md
swarf-bridge/: Cargo.toml
swarf-bridge/examples/: gcode_trace.rs
swarf-bridge/examples/viewer/: geometry.rs  main.rs
swarf-bridge/src/: lib.rs
swarf-gcode/: Cargo.toml
swarf-gcode/examples/: trace.rs
swarf-gcode/examples/gcode_samples/: NOTICE.md  rust_logo.gcode
swarf-gcode/examples/viewer/: geometry.rs  main.rs  renderer.rs
swarf-gcode/src/: command.rs  lib.rs  modal_groups.rs  motion.rs  state.rs  visitor.rs
swarf-motion/: Cargo.toml
swarf-motion/examples/: planner_trace.rs
swarf-motion/src/: arc.rs  block.rs  lib.rs  limits.rs  position.rs  queue.rs
