[package]
name = "swarf-bridge"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Thin adapter crate: translates swarf-gcode's resolved output into swarf-motion's plain Planner API, so neither crate needs to depend on the other."

[dependencies]
swarf-gcode = { path = "../swarf-gcode" }
swarf-motion = { path = "../swarf-motion" }
