[package]
name = "swarf-gcode"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "A NIST RS274NGC-compatible modal-state G-code interpreter. Resolves parsed G-code into motion commands for a downstream motion planner."

[dependencies]
# gcode 0.7's `core` module (ProgramVisitor/BlockVisitor/CommandVisitor)
# requires rust-version 1.85 / edition 2024 and is available with this
# toolchain. `default-features = false` drops 0.7's `alloc` and `serde`
# features - `gcode::core` itself has no alloc dependency, and neither
# does this crate, so the whole thing builds as genuine no_std with no
# heap allocation anywhere in the interpreter.
gcode = { version = "0.7", default-features = false }
