[package]
name = "swarf-gcode"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "A NIST RS274NGC-compatible modal-state G-code interpreter. Resolves parsed G-code into motion commands for a downstream motion planner."

[dependencies]
# gcode 0.7's `core` module (ProgramVisitor/BlockVisitor/CommandVisitor)
# requires rust-version 1.85 / edition 2024 and is available with this
# toolchain. `default-features = false` drops 0.7's `alloc` and `serde`
# features - `gcode::core` itself has no alloc dependency, and neither
# does this crate, so the whole thing builds as genuine no_std with no
# heap allocation anywhere in the interpreter.
gcode = { version = "0.7", default-features = false }
# core::f64 has no sqrt in no_std - libm provides it. Same crate gcode
# itself already pulls in for its own no_std trig, so this adds no new
# dependency to the build graph.
libm = "0.2"

[dev-dependencies]
# examples/viewer: a step-through 3D toolpath viewer. dev-dependencies
# only affect examples/tests, not the published no_std library build.
#
# `eframe`'s "wgpu" feature re-exports both `egui_wgpu` and `wgpu`
# (`eframe::egui_wgpu`, `eframe::wgpu`) already version-matched to what
# eframe uses internally - depending on ONLY eframe here (rather than
# also depending on `wgpu`/`egui_wgpu` directly) avoids a real failure
# mode: `egui_wgpu::CallbackTrait` is implemented against concrete
# `wgpu` types, so a second, independently-chosen `wgpu` dependency
# that drifts even a patch version from eframe's internal one fails to
# compile with confusing "expected wgpu::Device, found wgpu::Device"
# errors (two distinct crate instances of the same type).
eframe = { version = "0.31", features = ["wgpu"] }
bytemuck = { version = "1", features = ["derive"] }
# TableBuilder for the source-line list - virtualized (only builds
# visible rows, unlike a plain ScrollArea loop over every line), which
# matters for real-world files with thousands of lines. Pinned to match
# eframe's egui version; TableBuilder is pure `egui::Ui` code with no
# wgpu type boundary, so unlike `eframe`/`wgpu` this isn't a hard
# version-match requirement, just good hygiene.
egui_extras = "0.31"
